# Backend/Progress.Domain/Api/Request/ProductListRequest.cs
@@ -5,5 +5,6 @@
     public int? CategoryId { get; set; }
     public int? BrandId { get; set; }
     public bool? OnlyAvailable { get; set; }
+    public string? SearchText { get; set; }
   }
 }
